--- a/index.html
+++ b/index.html
@@ -400,8 +400,8 @@
         <div class="photopile-wrapper col-xs-12 text-center" data-anijs="if: scroll, on: window, do: rollIn animated, before: $scrollReveal repeat">
             <ul class="photopile col-xs-12">
                 <li>
-                    <a href="_IMG-20240204-WA0005.jpg">
-                    <img src="_IMG-20240204-WA0005.jpg" alt="commemorative photo" />
+                    <a href="_IMG-20240204-WA0005.JPG">
+                    <img src="_IMG-20240204-WA0005.JPG" alt="commemorative photo" />
                     </a>
                 </li>
                 <li>
