--- a/index.html
+++ b/index.html
@@ -475,10 +475,11 @@
         </div>
        
         <div id="player">
-            <audio id="audio">
-             <source src="audio for my love .mp3" type="audio/mp3">
-                        unsupported !! 
+            <audio controls>
+  <source src="audio for my love.mp3" type="audio/mpeg">
+  Your browser does not support the audio element.
             </audio>
+    
         </div>
 
 
